2010-02-15  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/test/test_Classifiers.py
	(SpecialCases.test_dictowner, SpecialCases.test_alt_retclaset):
	* guppy/heapy/test/test_Path.py (NewTestCase.test_1): 
	Changed to use clock() instead of time() for cpu time measurements
	so it should be more repeatable if there are other processes active.
	
	
2010-02-14  Sverker Nilsson  <sverker@sverker-laptop>

	* src/sets/nodeset.c (nodeset_op_set): Just an inconsequential
	change, it had two returns after each other.

	* src/sets/bitset.c (mutbitset_iop_PyLongObject): 
	In the latest change where a loop over pos was added, changed type
	from int to NyBit.
	
	* src/sets/bitset.h: Checks endianness and defines macros to
	handle it.
	* src/sets/bitset.c (immbitset_long): 
	* src/sets/bitset.c (mutbitset_iop_PyLongObject): 
	Changes to work with big endian.
	
2010-01-02  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/etc/KnuthBendix.py
	(KnuthBendix.make_confluent.add_reduction): Added missing argument
	to % in error message

2009-08-30  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/Use.py (_GLUECLAMP_): Added loadall method

	Version 0.1.9
	
2009-06-23  Sverker Nilsson  <sverker@sverker-laptop>

	* specs/index.gsl: download mentions today's date

	* guppy/sets/test.py: Made it try numpy.random instead of
	RandomArray; revert to random if no numpy.random could be
	installed so more tests can get done albeit slower.

	* MANIFEST.in: added specs/*.py

	* ANNOUNCE : Added advertisement for http://sncs.se

2009-06-18  Sverker Nilsson  <sverker@sverker-laptop>

	* specs/index.gsl: Changed wording of tested pythons to exclude
	having tested with python2.3 in 32 bit mode.

	* src/sets/bitset.c (bits_first,bits_last): Changed to use #if
	directive to get rid of warnings in 32-bit mode.

	* src/sets/bitset.h (NyBits_N): Changed definition to use
	ULONG_MAX to be able to use it in preprocessor #if directive.
